--- a/_config.yml
+++ b/_config.yml
@@ -17,18 +17,18 @@ baseurl: ""
 title: Tu-Hoa Pham
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Homepage
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+  Research: "http://deanattali.com"
+  Links:
+    - Github: "https://github.com/ph4m"
+    - Google Scholar: "https://scholar.google.com/citations?user=omqi7kAAAAAJ&hl=en&oi=sra"
+    - LinkedIn: "http://www.linkedin.com/in/tuhoapham"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
