--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: Homepage
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Research: "http://deanattali.com"
+  Research: "research"
   Links:
     - Github: "https://github.com/ph4m"
     - Google Scholar: "https://scholar.google.com/citations?user=omqi7kAAAAAJ&hl=en&oi=sra"
@@ -64,7 +64,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Tu-Hoa Pham
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -72,13 +72,13 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  github: ph4m
+  linkedin: tuhoapham
+#  twitter: nope
 #  reddit: yourname
 #  google-plus: +DeanAttali
-#  linkedin: daattali
+#  email: "someone@example.com"
+#  facebook: nope
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -92,14 +92,14 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
+  twitter: false
+  facebook: false
   google: false
-  linkedin: true
+  linkedin: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "hoa.pm"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
